--- a/index.css
+++ b/index.css
@@ -1,3 +1,11 @@
-p {
-    color: red
+header {
+	background-color: rgb(247, 117, 117);
+	color: white;
+	display: flex;
+	justify-content: space-between;
+}
+
+ul {
+	display: flex;
+	list-style: none;
 }
